--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Log in to facebook</h3>
         <div>
         
-        <input type="email" placeholder="Email address or phone number" style="font-size: 15px;">
+        <input type="email" type="tel" placeholder="Email address or phone number" style="font-size: 15px;">
         <br>
         <br>
         <input type="password" placeholder="password">
